fix(component): mega menu logo on mobile

--- a/components/page/megamenu/_mega-menu.css
+++ b/components/page/megamenu/_mega-menu.css
@@ -650,7 +650,7 @@
 
     .page-header__logo {
       width: 4rem;
-      height: 4rem;
+      height: 2.5rem;
     }
   }
 }
